Version 2.4.8
-----------------------------------------------------------------------
21 March 2008
+ Install.php and update.php are now creating groups for branch copied
  deities.

20 March 2008
+ Now uses second display() parameter in controlpanel::display to hold
  my_page as current tab

12 March 2008
+ My Pages are unregistered on module deletion (thanks Verdon).

7 March 2008
+ Raised sql character limit in default username, display_name, and
  group name installs.

3 March 2008
+ Fixed bug with forbidden usernames
+ Added a function to group to remove its permissions upon deletion.

20 February 2008
+ Removing banned user code. Let Access handle it.

23 January 2008
+ bookmark won't return a user to a authkey page if their session dies.

9 January 2008
+ Added missing table users_banned to update and install sql. *removed

4 January 2008
+ Fixed bug #1850815 : unknown function itemIsAllowed in Permission-php

14 December 2007
+ New functions in Users and Current_User to ban and unban users *removed
+ New panel tab and form for unbanning users. *removed
+ Updated: templates/forms/banned_users.tpl *removed

Version 2.4.7
--------------------------------------------------------------------
10 December 2007
+ Dropped GLOBAL authorization from canChangePassword since it isn't
  in the system yet.

Version 2.4.6
--------------------------------------------------------------------
26 November 2007
+ Added error check to permission menu.

12 November 2007
+ Error for missing user groups now reports user id.

9 November 2007
+ Forgot password will work if CAPTCHA is disabled.
+ Updated: templates/forms/forgot.tpl

29 October 2007
+ Using new savePermissions function instead of save.

17 October 2007
+ Current_User was calling giveItemPermissions incorrectly.

Version 2.4.5
--------------------------------------------------------------------
3 October 2007
+ RFE #1757530 added - admin can set reserved user name list.
+ Added search to groups listing.